updated the script file a bit

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
   <body>
     <h1>Best of 5 rounds!</h1>
     <div id="buttons">
-      <button id="Rock">🪨</button>
-      <button id="Paper">📃</button>
-      <button id="Scissors">✂️</button>
+      <button type="button" id="Rock">🪨</button>
+      <button type="button" id="Paper">📃</button>
+      <button type="button" id="Scissors">✂️</button>
     </div>
-    <div id="result"></div>
-    <div id="computer"></div>
-    <div id="player"></div>
+    <div id="textish">
+      <div id="result"></div>
+      <div id="computer"></div>
+      <div id="player"></div>
+    </div>
   </body>
 </html>
